--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,12 @@
     "type": "project",
     "require": {
         "php": "^7.0|^8.0",
+        "flipbox/lumen-generator": "^8.2",
+        "guzzlehttp/guzzle": "^7.4",
         "laravel/helpers": "^1.4",
         "laravel/lumen-framework": "^8.0",
-        "laravel/passport": "^10.1"
+        "laravel/passport": "^10.1",
+        "mpdf/mpdf": "^8.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
